[package]
name = "json-dir-list"
version = "1.32.5"
edition = "2021"
repository = "https://github.com/oicr-gsi/shesmu"
authors = ["Andre Masella <andre@masella.name>"]
description = "Scans directories for Shesmu"

[package.metadata.wix]
upgrade-guid = "6C1F4D6E-D287-497C-A284-422E8C118523"
path-guid = "C77C620C-E21B-4DD6-BAD1-6D753D381C58"
license = false
eula = false

[dependencies]
chrono = "^0.4"
gethostname = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
users = "^0.11"
