[package]
name = "shawk"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.4", features = ["derive"] }
directories = "^5.0"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
rpassword = "^7.2"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
